bizinikiwi/pezframe/support/test/tests/pezpallet_ui/no_default_but_missing_with_default.stderr
error: `#[pezpallet::no_default]` can only be used if `#[pezpallet::config(with_default)]` has been specified
  --> tests/pezpallet_ui/no_default_but_missing_with_default.rs:26:4
   |
26 |         #[pezpallet::no_default]
   |          ^^^^^^^^^^^^^^^^^^^^^^^
